SUBDIRS =	SmartIrc4net

OUTPUT_DIR = $(top_builddir)/bin/$(PROFILE)
OBJECT_DIR = $(OUTPUT_DIR)/obj
SOURCE_PATTERNS = *.cs */*.cs */*/*.cs */*/*/*.cs
XBUILD_FLAGS = /p:Configuration=Debug /p:SignAssembly=false /p:WarningLevel=0 /p:OutputPath=$(abspath $(OUTPUT_DIR)) /p:BaseIntermediateOutputPath=$(abspath $(OBJECT_DIR))/ /p:DocumentationFile=

JSON_SUBDIR = Newtonsoft.Json
JSON_SRCDIR = $(srcdir)/$(JSON_SUBDIR)/Src/Newtonsoft.Json
JSON_SOURCE_FILES = $(foreach pattern, $(SOURCE_PATTERNS), $(wildcard $(JSON_SRCDIR)/$(pattern)))
JSON_ASSEMBLY_NAME = Newtonsoft.Json.dll
JSON_ASSEMBLY_TARGET = $(OUTPUT_DIR)/$(JSON_ASSEMBLY_NAME)
JSON_BUILD_FILE = $(JSON_SRCDIR)/Newtonsoft.Json.csproj
JSON_XBUILD_FLAGS = $(XBUILD_FLAGS)

TWITTERIZER_SUBDIR = Twitterizer
TWITTERIZER_SRCDIR = $(srcdir)/$(TWITTERIZER_SUBDIR)/Twitterizer2
TWITTERIZER_SOURCE_FILES = $(foreach pattern, $(SOURCE_PATTERNS), $(wildcard $(TWITTERIZER_SRCDIR)/$(pattern)))
TWITTERIZER_ASSEMBLY_NAME = Twitterizer2.dll
TWITTERIZER_ASSEMBLY_TARGET = $(OUTPUT_DIR)/$(TWITTERIZER_ASSEMBLY_NAME)
TWITTERIZER_BUILD_FILE = $(TWITTERIZER_SRCDIR)/Twitterizer2.csproj
TWITTERIZER_XBUILD_FLAGS = $(XBUILD_FLAGS) /p:PostBuildEvent=

# magic automake variables
if ENABLE_ENGINE_TWITTER
pkglib_DATA = \
	$(JSON_ASSEMBLY_TARGET) $(JSON_ASSEMBLY_TARGET).mdb \
	$(TWITTERIZER_ASSEMBLY_TARGET) $(TWITTERIZER_ASSEMBLY_TARGET).mdb
endif

EXTRA_DIST = \
	 $(JSON_SOURCE_FILES) $(JSON_BUILD_FILE) $(JSON_SRCDIR)/Dynamic.snk \
	 $(TWITTERIZER_SOURCE_FILES) $(TWITTERIZER_BUILD_FILE) $(TWITTERIZER_SRCDIR)/Twitterizer2.snk

CLEANFILES = $(OBJECT_DIR)/Debug/Newtonsoft.Json.Dynamic.snk
# end of magic

$(JSON_ASSEMBLY_TARGET) $(JSON_ASSEMBLY_TARGET).mdb: $(JSON_BUILD_FILE) $(JSON_SOURCE_FILES)
	$(XBUILD) $(JSON_XBUILD_FLAGS) $(JSON_BUILD_FILE)

$(TWITTERIZER_ASSEMBLY_TARGET) $(TWITTERIZER_ASSEMBLY_TARGET).mdb: $(TWITTERIZER_BUILD_FILE) $(TWITTERIZER_SOURCE_FILES)
	$(XBUILD) $(TWITTERIZER_XBUILD_FLAGS) $(TWITTERIZER_BUILD_FILE)

if ENABLE_ENGINE_TWITTER
clean-local:
	$(XBUILD) $(JSON_XBUILD_FLAGS) /t:Clean $(JSON_BUILD_FILE)
	$(XBUILD) $(TWITTERIZER_XBUILD_FLAGS) /t:Clean $(TWITTERIZER_BUILD_FILE)
endif
